--- a/src/main/java/com/ulquertech/resources/style.css
+++ b/src/main/java/com/ulquertech/resources/style.css
@@ -7,7 +7,11 @@
 
 .flex-container > * {
     padding: 0.5em;
-    flex: 1 100%;
+    /*flex: 1 100%;*/
+}
+
+.flex-container > table {
+    padding: 0.15em !important;
 }
 
 .flexed-column {
@@ -31,6 +35,18 @@ body {
 
 .ui.small.button > .icon {
     margin: 0 !important;
+}
+
+.verticalCard, .monsterCard {
+    border: 1px solid #888888;
+    width: 40px;
+    height: 60px;
+    min-width: 40px;
+    min-height: 60px;
+}
+
+.banned {
+    margin: 50px auto auto -14px;
 }
 
 
